--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
   performs a "Blocking Method" to output the mean and standard deviation. For
   more information on the method refernce:
 
-  ~[[https://www.researchgate.net/publication/258024272_Error_Estimates_on_Averages_of_Correlated_Data][Flyvbjerg, Henrik & Petersen, H.G.. (1989). Error Estimates on Averages of Correlated Data. The Journal of Chemical Physics. 91. 10.1063/1.457480.]]~
+  ~Flyvbjerg, Henrik & Petersen, H.G.. (1989). Error Estimates on Averages of Correlated Data. The Journal of Chemical Physics. 91. 10.1063/1.457480.~
 
 * Usage
   Right now this method needs to be pulled in by Github see the following
